--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sip-&-split---เครื่องคิดเลขหารบิล",
+  "name": "sip-&-split",
   "private": true,
   "version": "0.0.0",
   "type": "module",
